Gradle remove plugin chainsaw but error with Mockito module